# kugutsu

./: .gitignore  .npmignore  .tool-versions  CLAUDE.md  README.md  README_ELECTRON.md  TASK_EXECUTION_REPORT.md  TEST.md  TEST2.md  TEST_HEY.md  TEST_MORNING.md  package-lock.json  package.json  pyproject.toml  test-visual-ui.js  test_claude_multiprocess.py  test_multiprocess.py  tsconfig.json
.github/workflows/: publish.yml  publish_github.yml  publish_npm.yml
docs/: AI_PARALLEL_DEVELOPMENT_DESIGN.md  SYSTEM_CONCERNS_AND_IMPROVEMENTS.md  electron-logging-improvement-plan.md  parallel-development-review-architecture.md  parallel-development-workflow.md  parallel-review-analysis.md
electron/: package-lock.json  package.json  tsconfig.json  tsconfig.preload.json
electron/main/: index.js  index.js.map  index.ts
electron/preload/: index.js  index.js.map  index.ts
electron/renderer/: index.html  test.html
electron/renderer/js/: app-backup.js  app-fixed.js  app.js  simple-task-loader.js  task-manager.js  themes.js
electron/renderer/styles/: main.css  tasks.css
hello_cli/: __init__.py  main.py
multi_engineer/: __init__.py  __main__.py
multi_engineer/application/: __init__.py  services.py
multi_engineer/domain/: __init__.py  entities.py  repositories.py  value_objects.py
multi_engineer/infrastructure/: __init__.py  claude_repository.py  git_repository.py
multi_engineer/presentation/: __init__.py  cli.py
src/: index.ts  parallel-dev-electron.ts  parallel-dev.ts  startElectronUI.ts
src/managers/: BaseAI.ts  EngineerAI.ts  GitWorktreeManager.ts  ParallelDevelopmentOrchestrator.ts  ParallelDevelopmentOrchestratorWithElectron.ts  ParallelPipelineManager.ts  ProductOwnerAI.ts  RequirementsAnalyzerAI.ts  ReviewWorkflow.ts  TaskGeneratorAI.ts  TechLeadAI.ts  TechStackAnalyzerAI.ts
src/templates/: design-doc-template.ts
src/types/: index.ts  logging.ts
src/utils/: ClaudeCodeSetupChecker.ts  CompletionReporter.ts  DependencyManager.ts  DependencyVisualizer.ts  ElectronLogAdapter.ts  ImprovedParallelLogViewer.ts  LogFormatter.ts  MemoryMonitor.ts  MergeCoordinator.ts  MergeQueue.ts  ParallelLogViewer.ts  ReviewQueue.ts  TaskEventEmitter.ts  TaskInstructionManager.ts  TaskQueue.ts
tests/: __init__.py  test_main.py
